--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,3 +1,15 @@
-<html>
-    <title>To-Do lists</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-Do</title>
+</head>
+<body>
+    <h1>Your To-Do list</h1>
+    <input type="text" id="id_new_item" placeholder="Enter a to-do item">
+    <table id="id_list_table">
+    </table>
+</body>
 </html>
